--- a/.github/workflows/ECS.yml
+++ b/.github/workflows/ECS.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Configurando credenciais AWS
       uses: aws-actions/configure-aws-credentials@v1
       with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-access-key-id: ${{ secrets.ID_CHAVE_ACESSO }}
+          aws-secret-access-key: ${{ secrets.CHAVE_SECRETA }}
+          aws-region: sa-east-1
         
     - name: Obtendo arquivo da tarefa
       run: aws ecs describe-task-definition \
