--- a/.github/workflows/ECS.yml
+++ b/.github/workflows/ECS.yml
@@ -18,5 +18,5 @@ jobs:
         
     - name: Obtendo arquivo da tarefa
       run: aws ecs describe-task-definition \
-           --task-definition Tarefa_API-GO \
+           --task-definition Tarefa_API-GO:1 \
            --query taskDefinition > task-definition.json
